# birefnet-hf-api

./: .dockerignore  .gitignore  .python-version  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: __init__.py  config.py  routes.py
app/middleware/: auth.py
app/services/: image_processor.py
